assets/_scss/_block_width.scss
.alignfull,
.vk_outer-width-full {
	// 直下でもconstrainedの中でも幅は同じ
	&,
	.is-layout-constrained & {
		width: auto;
		max-width: var(--wp--custom--width--wrapper) !important;
		&.wp-block-image {
			// Default block style overwrite
			max-width: var(--wp--custom--width--wrapper);
		}
	}
	.is-layout-constrained & {
		margin-left: calc( 50% - var(--wp--custom--width--wrapper) / 2 ) !important;
		margin-right: calc( 50% - var(--wp--custom--width--wrapper) / 2 ) !important;
	}
}

.alignwide {
	.is-layout-constrained:where(:not(:is(.alignfull, .alignwide)))>& {
		width: calc(100% + (var(--wp--custom--width--wrapper) - 100%) / 2);
		margin-left: calc((100% - var(--wp--custom--width--wrapper)) / 4) !important;
		margin-right: calc((100% - var(--wp--custom--width--wrapper)) / 4) !important;

		&.wp-block-image {
			max-width: var(--wp--custom--width--wrapper);
		}
	}
}

// in addition to setted _scss/_vk-blocks-override.scss

// サイドバーがある場合の幅調整
.is-style-main-layout:has(.is-style-main-layout-sidebar) {
	&>.wp-block-column {
		:is(.alignfull, .alignwide) {
			margin-left: 0 !important;
			margin-right: 0 !important;
			width: 100%;
		}
	}
}

